src/objects/Additional_Debt__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Additional_Debts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Civil_Litigation__c</fullName>
        <label>Civil Litigation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Assessment</label>
        <referenceTo>Credit_Assessment__c</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Debt_Type__c</fullName>
        <label>Debt Type</label>
        <picklist>
            <picklistValues>
                <fullName>Personal Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdraft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Legal Entity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Repayment__c</fullName>
        <label>Monthly Repayment</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Filter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Account__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Primary_Contact__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>In Progress, Pending Signature, Application Revised, Assessment In Progress</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Debts (Opportunity Name)</relationshipLabel>
        <relationshipName>Debts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Debts</relationshipLabel>
        <relationshipName>Debts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Debt_Amount__c</fullName>
        <label>Original Debt Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Debts</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Debt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debts</pluralLabel>
    <recordTypes>
        <fullName>Account_Debts</fullName>
        <active>true</active>
        <label>Account Debts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Assessment_Debts</fullName>
        <active>true</active>
        <label>Credit Assessment Debts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity_Debts</fullName>
        <active>true</active>
        <label>Opportunity Debts</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>